--- a/internal/frontend/components/base.templ
+++ b/internal/frontend/components/base.templ
@@ -10,8 +10,10 @@ templ Base(title string) {
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/static/css/event_details.css">
         <link rel="stylesheet" href="/static/css/style.css">
         <link rel="stylesheet" href="/static/css/crud.css">
+        <link rel="stylesheet" href="/static/css/events.css">
         <title>{ title } | Музейный каталог</title>
         <script src="https://unpkg.com/htmx.org@1.9.6"></script>
         <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -66,12 +68,12 @@ templ EmployeesNavigate(title string) {
             
             <!-- Навигация -->
             <nav class="nav-container">
-                <a href="/museum/artworks" class="nav-button">
-                    <span class="button-text">Экспонаты</span>
-                </a>
-                <a href="/museum/events" class="nav-button">
-                    <span class="button-text">Мероприятия</span>
-                </a>
+                // <a href="/museum/artworks" class="nav-button">
+                //     <span class="button-text">Экспонаты</span>
+                // </a>
+                // <a href="/museum/events" class="nav-button">
+                //     <span class="button-text">Мероприятия</span>
+                // </a>
                 <a href="/museum/employee/artworks" class="nav-button">
                     <span class="button-text">Экспонаты</span>
                 </a>
@@ -81,11 +83,32 @@ templ EmployeesNavigate(title string) {
                 <a href="/museum/employee/collections" class="nav-button">
                     <span class="button-text">Коллекции</span>
                 </a>
+                <a href="/museum/employee/events" class="nav-button">
+                    <span class="button-text">Мероприятия</span>
+                </a>
+                <a href="/museum/artworks" class="nav-button" onclick="logout(event)">
+                    <span class="button-text">Выйти</span>
+                </a>
             </nav>
         </header>
 
         <main class="main-content">
             { children... }
         </main>
+
+        <script>
+            function logout(event) {
+                event.preventDefault();
+                
+                // Удаляем токен из localStorage
+                localStorage.removeItem('access_token');
+                
+                // Удаляем токен из куков
+                document.cookie = 'access_token=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+                
+                // Перенаправляем на главную страницу
+                window.location.href = '/museum/artworks';
+            }
+        </script>
     }
 }
